update_Day_003-3_HW

--- a/homework/Day_003-2_HW.ipynb
+++ b/homework/Day_003-2_HW.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "'n00015388_157\\thttp://farm1.static.flickr.com/145/430300483_21e993670c.jpg\\nn00015388_238\\thttp://farm2'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "'n00015388_157\\thttp://farm1.static.flickr.com/145/430300483_21e993670c.jpg'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "4  n00015388_355  http://img100.imageshack.us/img100/3253/forres..."
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,6 @@
     "    for url in url_list:\n",
     "        try:\n",
     "            r = requests.get(url)\n",
-    "#             print('ok')\n",
     "            img = Image.open(BytesIO(r.content))\n",
     "            img_list.append(img)\n",
     "        except Exception as inst:\n",
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -301,13 +300,13 @@
     {
      "data": {
       "text/plain": [
-       "[<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=499x435 at 0x1231D88D0>,\n",
-       " <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x322 at 0x1231CA5F8>,\n",
-       " <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=375x500 at 0x12315AF60>,\n",
-       " <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x375 at 0x1231D8940>]"
+       "[<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=499x435 at 0x121C171D0>,\n",
+       " <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x322 at 0x10F629438>,\n",
+       " <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=375x500 at 0x10F629278>,\n",
+       " <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x375 at 0x10F629860>]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
